--- a/src/app/empleado/empleado.html
+++ b/src/app/empleado/empleado.html
@@ -1,6 +1,8 @@
 <p>Nombre del empleado: {{ nombre }}</p>
 <p>Apellido del empleado: {{ apellido }}</p>
 <p>Edad del empleado: {{ (edad > 17) ? "Mayor de edad" : "Menor de edad" }}</p>
-Introduce la empresa: <input type="text" #empresa (keyup)="0">
+Introduce la empresa: <input type="text" #empresa (keyup)="0" [disabled] = "habilitar_input_property">
 <!--<button (click)="llamar_empresa(empresa.value)">Cambiar</button>-->
 <p>Empresa: {{ empresa.value }}</p>
+Registrado: <input type="checkbox" id="registro" [checked] = "usuario_registrado_property" (click)="cambiar_registro()">
+<p>{{ texto_registro }}</p>
